manifests/ingress-14.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "diaggarw-d184"
    labels:
        app: "diaggarw-d184"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: diaggarwadc4-diaggarw-d184.8fd377fc1d604524b4e1.southindia.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "diaggarw-d184"
                servicePort: 8080
